margin, transition, img paths fixes

--- a/page.html
+++ b/page.html
@@ -158,13 +158,13 @@
         <div>
 
           <div>
-            <img src="img/vbig4431-346x530.jpg" alt="Spider man">
+            <img src="img/products/vbig4431-346x530.jpg" alt="Spider man">
           </div>
 
           <div class="preview flex">
-            <img src="img/vbig4431-346x530.jpg" alt="">
-            <img src="img/vbig4431-346x530.jpg" alt="">
-            <img src="img/vbig4431-346x530.jpg" alt="">
+            <img src="img/products/vbig4431-346x530.jpg" alt="">
+            <img src="img/products/vbig4431-346x530.jpg" alt="">
+            <img src="img/products/vbig4431-346x530.jpg" alt="">
           </div>
 
 
@@ -172,22 +172,15 @@
 
         <div>
 
-          <h1>Человеки</h1>
           <p>
-            "<span class="bold">Человеки</span>" — это банда обезьян-байкеров в небольшом американском городке.
-            На дворе семидесятые: процветают запрещённые вещества и свободная любовь, обезьяны развлекают
-            себя подпольными человечьими боями, а также стычками с конкурирующими бандами.
+            "Человеки" — это банда обезьян-байкеров в небольшом американском городке. На дворе семидесятые:
+            процветают запрещённые вещества и свободная любовь, обезьяны развлекают себя подпольными
+            человечьими боями, а также стычками с конкурирующими бандами.
           </p>
           <p>
-            Джонни — брат Бобби, лидера "<span class="bold">Человеков</span>". Он служил в обезьяньем Вьетнаме
-            и немало повидал, сражаясь с узкоглазыми мартышками-дуками. И вот теперь он возвращается домой.
-            Что же придумают братья вместе?
-          </p>
-
-          <p>
-            Джонни — брат Бобби, лидера "<span class="bold">Человеков</span>". Он служил в обезьяньем Вьетнаме
-            и немало повидал, сражаясь с узкоглазыми мартышками-дуками. И вот теперь он возвращается домой.
-            Что же придумают братья вместе?
+            Джонни — брат Бобби, лидера "Человеков". Он служил в обезьяньем Вьетнаме и немало повидал,
+            сражаясь с узкоглазыми мартышками-дуками. И вот теперь он возвращается домой. Что же
+            придумают братья вместе?
           </p>
 
           <span class="price">350₽</span>
@@ -199,6 +192,7 @@
         </div>
 
         <div class="parameters">
+
           <p>Возрастное ограничение: 18+</p>
           <p>Авторы: Том Нили, Кинэн Маршалл Келлер</p>
           <p>Издатель в России: Комильфо, 2017</p>
@@ -211,11 +205,11 @@
         </div>
 
         <div class="recommended-products flex">
-          <img src="img/vbig4431-346x530.jpg" alt="">
-          <img src="img/vbig4431-346x530.jpg" alt="">
-          <img src="img/vbig4431-346x530.jpg" alt="">
-          <img src="img/vbig4431-346x530.jpg" alt="">
-          <img src="img/vbig4431-346x530.jpg" alt="">
+          <img src="img/products/vbig4431-346x530.jpg" alt="">
+          <img src="img/products/vbig4431-346x530.jpg" alt="">
+          <img src="img/products/vbig4431-346x530.jpg" alt="">
+          <img src="img/products/vbig4431-346x530.jpg" alt="">
+          <img src="img/products/vbig4431-346x530.jpg" alt="">
         </div>
         <!-- /recommended products -->
 
@@ -286,5 +280,4 @@
     - !!! aside последний блок сделать на всю высоту, чтобы не было белой дырки
     - сделать спрайты для иконок
     - перевести иконки в png или попробовать ужать svg
-    - fix: в хедере центрирование части с "оплата... сертификаты..."
 -->
