new icons, style fixes, links added

--- a/page.html
+++ b/page.html
@@ -158,15 +158,16 @@
         <div>
 
           <div>
-            <img src="img/products/vbig4431-346x530.jpg" alt="Spider man">
+            <a href="">
+              <img src="img/products/vbig4431-346x530.jpg" alt="Spider man">
+            </a>
           </div>
 
           <div class="preview flex">
-            <img src="img/products/vbig4431-346x530.jpg" alt="">
-            <img src="img/products/vbig4431-346x530.jpg" alt="">
-            <img src="img/products/vbig4431-346x530.jpg" alt="">
+            <a href=""><img src="img/products/vbig4431-346x530.jpg" alt=""></a>
+            <a href=""><img src="img/products/vbig4431-346x530.jpg" alt=""></a>
+            <a href=""><img src="img/products/vbig4431-346x530.jpg" alt=""></a>
           </div>
-
 
         </div>
 
