--- a/index.html
+++ b/index.html
@@ -410,12 +410,12 @@
     <div class="light">
       <p>
         <a href="">
-          Екатеринбург<br>
+          <img src="img/icons/map.png" alt="Map"> Екатеринбург<br>
           ул. Бориса Ельцина 3<br>
           Ельцин-центр, 2 этаж
         </a>
-        <a href="" class="accent-link">8 (999) 454 6425</a>
-        <a href="">support@gotcomics.ru</a>
+        <a href="" class="accent-link"><img src="img/icons/tel.png" alt="tel"> 8 (999) 454 6425</a>
+        <a href=""><img src="img/icons/mail.png" alt="mail"> support@gotcomics.ru</a>
       </p>
     </div>
   
