search form media, shadow fix, lil fixes

--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
           <a href=""><span>Link</span></a>
         </nav>
 
+        <nav class="dark">
+          <a class="first-sidebar-item"><span>Link</span></a>
+          <a href=""><span>Link</span></a>
+        </nav>
+        
+        <nav class="light">
+          <a class="first-sidebar-item"><span>Link</span></a>
+          <a href=""><span>Link</span></a>
+        </nav>
+
       </div>
 
     </aside>
@@ -122,7 +132,7 @@
       <div class="header flex">
 
         <div class="header-item flex light">
-          <span>Магазин комиксов в Екатеринбурге</span>
+          <span>Магазин комиксов и всяких штук</span>
           <span>
             <img src="img/icons/map.png" alt="Map">
             <a href="">Вайнера 8, ТЦ Красный Леопард, 2 этаж</a>
@@ -380,8 +390,8 @@
   
     <div class="dark">
       
-<!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/576342" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:220px; height:220px"></iframe>
+      <!-- SnapWidget -->
+      <iframe src="https://snapwidget.com/embed/576342" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:220px; height:220px"></iframe>
 
     </div>
 
@@ -390,7 +400,7 @@
       <!-- VK Widget -->
       <div id="vk_groups"></div>
       <script type="text/javascript">
-      VK.Widgets.Group("vk_groups", {mode: 3, width: "315", color1: 'EFB03B', color2: 'FFFFFF', color3: 'FFFFFF'}, 61616920);
+      VK.Widgets.Group("vk_groups", {mode: 3, width: "300", color1: 'EFB03B', color2: 'FFFFFF', color3: 'FFFFFF'}, 61616920);
       </script>
 
     </div>
