green active link, fixes, search-form margin fixes

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
           <a href=""><img src="img/publ/panini-rus.svg" alt="Panini Rus"><span>Panini Rus</span></a>
           <a href=""><img src="img/publ/parallel-comics.svg" alt="Parallel Comics"><span>Parallel Comics</span></a>
           <a href=""><img src="img/publ/smart-owl.svg" alt="Smart Owl"><span>Smart Owl</span></a>
-          <a href=""><img src="img/publ/vd.svg"><span>VD Publishing</span></a>
-          <a href=""><img src="img/publ/xlmedia.svg"><span>XL Media</span></a>
-          <a href=""><img src="img/publ/zangavar.svg"><span>Zangavar</span></a>
-          <a href=""><img src="img/publ/azbuka.svg"><span>Азбука-Аттикус</span></a>
-          <a href=""><img src="img/publ/ast.svg"><span>АСТ</span></a>
-          <a href=""><img src="img/publ/bumkniga.svg"><span>Бумкнига</span></a>
-          <a href=""><img src="img/publ/unicorn.svg"><span>Белый Единорог</span></a>
-          <a href=""><img src="img/publ/kkf.svg"><span>КК Фантастика</span></a>
-          <a href=""><img src="img/publ/komilfo.svg"><span>Комильфо</span></a>
-          <a href=""><img src="img/publ/comfed.svg"><span>КомФедерация</span></a>
-          <a href=""><img src="img/publ/ramona.svg"><span>Рамона</span></a>
-          <a href=""><img src="img/publ/eksmo.svg"><span>Эксмо</span></a>
+          <a href=""><img src="img/publ/vd.svg" alt="VD Pudlishing"><span>VD Publishing</span></a>
+          <a href=""><img src="img/publ/xlmedia.svg" alt="XL Media"><span>XL Media</span></a>
+          <a href=""><img src="img/publ/zangavar.svg" alt="Zangavar"><span>Zangavar</span></a>
+          <a href=""><img src="img/publ/azbuka.svg" alt="Азбука-Аттикус"><span>Азбука-Аттикус</span></a>
+          <a href=""><img src="img/publ/ast.svg" alt="АСТ"><span>АСТ</span></a>
+          <a href=""><img src="img/publ/bumkniga.svg" alt="Бумкнига"><span>Бумкнига</span></a>
+          <a href=""><img src="img/publ/unicorn.svg" alt="Белый единорог"><span>Белый Единорог</span></a>
+          <a href=""><img src="img/publ/kkf.svg" alt="Книжный клуб Фантастика"><span>КК Фантастика</span></a>
+          <a href=""><img src="img/publ/komilfo.svg" alt="Комильфо"><span>Комильфо</span></a>
+          <a href=""><img src="img/publ/comfed.svg" alt="КомФедерация"><span>КомФедерация</span></a>
+          <a href=""><img src="img/publ/ramona.svg" alt="Рамона"><span>Рамона</span></a>
+          <a href=""><img src="img/publ/eksmo.svg" alt="Эксмо"><span>Эксмо</span></a>
           <a href=""><img src=""><span>Прочие издательства</span></a>
         </nav>
 
@@ -112,16 +112,6 @@
           <a href=""><span>Link</span></a>
         </nav>
 
-        <nav class="dark">
-          <a class="first-sidebar-item"><span>Link</span></a>
-          <a href=""><span>Link</span></a>
-        </nav>
-        
-        <nav class="light">
-          <a class="first-sidebar-item"><span>Link</span></a>
-          <a href=""><span>Link</span></a>
-        </nav>
-
       </div>
 
     </aside>
@@ -135,7 +125,7 @@
           <span>Магазин комиксов и всяких штук</span>
           <span>
             <img src="img/icons/map.png" alt="Map">
-            <a href="">Вайнера 8, ТЦ Красный Леопард, 2 этаж</a>
+            <a href="">ул. Бориса Ельцина 3, Ельцин-центр, 2 этаж</a>
           </span>
           <span>
             <img src="img/icons/tel.png" alt="tel">
@@ -432,10 +422,10 @@
   
   </footer>
 
-  <script src="js/scripts.js"></script>
-
   <!-- vk chat 
   <div id="vk_community_messages"></div>-->
+
+  <script src="js/scripts.js"></script>
 
 </body>
 </html>
@@ -444,5 +434,5 @@
   TODO:
     - !!! aside последний блок сделать на всю высоту, чтобы не было белой дырки
     - сделать спрайты для иконок
-    - перевести иконки в png или попробовать ужать svg
+    - перевести иконки в png
 -->
