--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
       </div>
       <!-- /breadcrumbs -->
 
+<!-- ### end of header.php ### -->
+
       <div class="products-row flex">
         
         <div class="product">
@@ -369,6 +371,10 @@
 
       </div>
       <!-- /products-row -->
+
+<!-- ### end of content.php ### -->
+
+<!-- ### footer.php ###-->
 
     </main>
     <!-- /content -->
